--- a/css/nguoidung.css
+++ b/css/nguoidung.css
@@ -1,174 +1,232 @@
-
-
 .container {
-    display: flex;
-    width: 100%;
+  display: flex;
+  width: 100%;
+  justify-content: center;
 }
 
 .sidebar {
-    width: 25%;
-    background-color: #fef6f5;
-    padding: 20px;
+  width: 10%;
+  background-color: #fef6f5;
+  padding: 20px;
+  margin: 24px 14px 24px 0;
+  border-radius: 5px;
+  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
 }
+
 .sidebar h4 {
-  margin-left: 50%;
   margin-top: 0;
-  cursor: pointer; /* Thêm con trỏ để chỉ ra rằng đây là phần có thể nhấn */
-  margin-right: 10px;
+  cursor: pointer;
+  /* Thêm con trỏ để chỉ ra rằng đây là phần có thể nhấn */
+  /* margin-right: 10px; */
 }
+
 .sidebar h4 i {
   margin-right: 10px;
   color: rgb(0, 132, 142);
 }
+
+.sidebar i {
+  color: rgb(0, 132, 142);
+  cursor: pointer;
+}
+
+.sidebar a {
+  margin-left: 12px;
+  color: black;
+}
+
+.sidebar a:hover {
+  color: rgb(250, 31, 31);
+}
+
+.sidebar h4:hover {
+  color: rgb(0, 132, 142);
+}
+
+.icon-user {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+  border-bottom: 1px solid #CFCFCF;
+}
+
+.icon-user svg {
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+}
+
 .main-content {
-    width: 60%;
-    padding: 0 20px 20px 20px;
-    margin: 5px;
-    border-radius: 5px;
-    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
-    background-color: #fff;
+  width: 60%;
+  padding: 0 20px 20px 20px;
+  margin: 24px 0 24px 0;
+  border-radius: 5px;
+  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
 }
 
 .main-content h2 {
-    margin-top: 0;
+  margin-top: 0;
 }
 
 #content-item {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 .order-container {
-    max-width: 800px;
-    margin: 20px auto;
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
-  }
-  
-  .order-item {
-    border-bottom: 1px solid #ddd;
-    padding: 20px;
-  }
-  
-  .shop-header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 10px;
-  }
-  
-  .label {
-    color: #fff;
-    background-color: #f44336;
-    padding: 5px 10px;
-    border-radius: 5px;
-    font-size: 12px;
-  }
-  
-  .favorite {
-    background-color: #ff4081;
-  }
-  .order-status {
-    color: #fb6767;
-  }
-  
-  .chat-button, .view-shop {
-    font-size: 14px;
-    padding: 5px 10px;
-    border: none;
-    background-color: #008cba;
-    color: white;
-    border-radius: 4px;
-    cursor: pointer;
-    margin-left: 10px;
-  }
-  
-  .order-content {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-  
-  .order-details {
-    display: flex;
-    flex-direction: column;
-  }
-  .product-order {
-    display: flex;
-    border-bottom: 0.2px solid #eee;
-  }
-  .order-details img {
-    width: 100px;
-    height: 100px;
-    object-fit: cover;
-    margin-right: 10px;
-  }
-  
-  .product-name {
-    font-weight: bold;
-  }
-  
-  .product-variant {
-    font-size: 14px;
-    color: #555;
-  }
-  
-  .order-btn {
-    text-align: right;
-  }
-  
-  .price del {
-    color: #999;
-    font-size: 14px;
-  }
-  
-  .price {
-    color: #f44336;
-    font-weight: bold;
-  }
-  
-  .total {
-    display: block;
-    font-size: 16px;
-    margin-top: 10px;
-    color: #333;
-  }
-  
-  .btns {
-    display: inline-block;
-    padding: 8px 15px;
-    margin-top: 10px;
-    font-size: 14px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  
-  .btns.received {
-    background-color: #4caf50;
-    color: white;
-  }
-  
-  .btns.contact {
-    background-color: #008cba;
-    color: white;
-  }
-  
-  .btns.cancel {
-    background-color: #fbc02d;
-    color: white;
-  }
-  button:hover:not(:disabled) {
-    background-color: #0056b3;
+  max-width: 800px;
+  margin: 20px auto;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+}
+
+.order-item {
+  border-bottom: 1px solid #1d1d1d;
+  padding: 20px;
+}
+
+.shop-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+
+.label {
+  color: #fff;
+  /* background-color: #f44336; */
+  padding: 5px 10px;
+  border-radius: 5px;
+  font-size: 12px;
+}
+
+.favorite {
+  background-color: #ff4081;
+}
+
+.order-status {
+  color: #fb6767;
+}
+
+.chat-button,
+.view-shop {
+  font-size: 14px;
+  padding: 5px 10px;
+  border: none;
+  background-color: #008cba;
+  color: white;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-left: 10px;
+}
+
+.order-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.order-details {
+  display: flex;
+  flex-direction: column;
+}
+
+.product-order {
+  display: flex;
+  border-bottom: 0.2px solid #eee;
+}
+
+.order-details img {
+  width: 100px;
+  height: 100px;
+  object-fit: cover;
+  margin-right: 10px;
+}
+
+.product-name {
+  font-weight: bold;
+}
+
+.product-variant {
+  font-size: 14px;
+  color: #555;
+}
+
+.order-btn {
+  text-align: right;
+}
+
+.price del {
+  color: #999;
+  font-size: 14px;
+}
+
+.price {
+  color: #f44336;
+  font-weight: bold;
+}
+
+.total {
+  display: block;
+  font-size: 16px;
+  margin-top: 10px;
+  color: #333;
+
+}
+.total-all {
+  margin: 10px;
+}
+.total-all .label {
+  color: black;
+  font-size: 16px;
+  margin-right: 5px;
+}
+
+.total-all .amount {
+  font-weight: bold;
+  color: #f44336;
+  font-size: 20px;
+  font-family: helvetica, arial, sans-serif;
+}
+
+.btns {
+  display: inline-block;
+  padding: 8px 15px;
+  margin-top: 10px;
+  font-size: 14px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.btns.received {
+  background-color: #4caf50;
+  color: white;
+}
+
+.btns.contact {
+  background-color: #008cba;
+  color: white;
+}
+
+.btns.cancel {
+  background-color: #fbc02d;
+  color: white;
+}
+
+button:hover:not(:disabled) {
+  background-color: #0056b3;
 }
 
 /* Định dạng nút khi bị vô hiệu hóa */
 button:disabled {
-    background-color: #cccccc; 
-    color: #666666;          
-    cursor: not-allowed;     
-    opacity: 0.7;            
+  background-color: #cccccc;
+  color: #666666;
+  cursor: not-allowed;
+  opacity: 0.7;
 }
 
 /* Mỗi sản phẩm trong kết quả tìm kiếm */
@@ -207,7 +265,8 @@ button:disabled {
 /* Giá sản phẩm */
 .search-result-item p strong {
   font-weight: bold;
-  color: #007bff; /* Màu giá nổi bật */
+  color: #007bff;
+  /* Màu giá nổi bật */
   font-size: 14px;
 }
 
@@ -247,6 +306,7 @@ button:disabled {
   box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.4);
   cursor: pointer;
 }
+
 .pagination-button {
   margin: 0 5px;
   padding: 5px 10px;
@@ -256,11 +316,49 @@ button:disabled {
 }
 
 .pagination-button.active {
-  background-color: #3174bb; /* Màu nền khi trang được chọn */
-  color: white; /* Màu chữ khi trang được chọn */
-  border-color:#3174bb; /* Đổi màu viền khi trang được chọn */
+  background-color: #3174bb;
+  /* Màu nền khi trang được chọn */
+  color: white;
+  /* Màu chữ khi trang được chọn */
+  border-color: #3174bb;
+  /* Đổi màu viền khi trang được chọn */
 }
 
 .pagination-button:hover {
-  background-color: #ddd; /* Màu nền khi hover vào nút */
+  background-color: #ddd;
+  /* Màu nền khi hover vào nút */
+}
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 30%;
+  border-radius: 8px;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
 }
