--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,4 @@
+
 body {
     background-color: #f4f4f4;
     margin: 0;
@@ -210,7 +211,9 @@ ul li i {
 .dropdown-content li {
     white-space: nowrap;
 }
-
+.home-container {
+    display: flex;
+}
 .dropdown-content li a {
     display: block;
     padding: 10px 15px;
